# email-triage-env

./: Dockerfile  README.md  app.py  dashboard.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: data.py  data_tickets.py  env.py  models.py
environment/tasks/: task1_easy.py  task2_medium.py  task3_hard.py  task4_routing.py
tests/: test_env.py
